[gd_scene load_steps=2 format=3 uid="uid://b6h1w25m0ca2q"]

[ext_resource type="Script" path="res://ui/dialogs/add_game_object_dialog.gd" id="1_f0ywj"]

[node name="AddGameObjectDialog" type="Window"]
title = "Add a Game Object"
position = Vector2i(0, 36)
size = Vector2i(350, 350)
wrap_controls = true
transient = true
exclusive = true
min_size = Vector2i(350, 350)
script = ExtResource("1_f0ywj")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="ItemList" type="ItemList" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="item_activated" from="PanelContainer/MarginContainer/VBoxContainer/ItemList" to="." method="_on_item_list_item_activated"]
